selinux: Fix ugly wrapping of main SElinux troubleshooting message

--- a/pkg/selinux/setroubleshoot.css
+++ b/pkg/selinux/setroubleshoot.css
@@ -74,6 +74,10 @@ div.alert-ct-top {
     margin-top: 10px;
 }
 
+.list-group-item .alert {
+    margin-top: 10px;
+}
+
 /* header, mostly from table.listing-ct > thead h3 */
 span.title-ct-selinux {
     vertical-align: middle;
